force-app/main/default/objects/Prescription__c/Prescription__c.object-meta.xml
<CustomObject>
    <label>Prescription</label>
    <nameField>
        <displayFormat>Rx-{000000}</displayFormat>
        <label>Prescription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prescriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>