force-app/main/default/objects/Prescription__c/fields/Daily_Dose__c.field-meta.xml
<CustomField>
    <fullName>Daily_Dose__c</fullName>
    <inlineHelpText>Please enter daily dose in #. 
e.g.) 2 T BID = 6, 1 puff BID = 2. Leave blank if not applicable.</inlineHelpText>
    <label>Daily Dose</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>