force-app/main/default/objects/Prescription__c/fields/Days_Supply__c.field-meta.xml
<CustomField>
    <fullName>Days_Supply__c</fullName>
    <label>Days Supply</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>