force-app/main/default/objects/Prescription__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>TextArea</type>
</CustomField>