force-app/main/default/objects/Prescription__c/fields/External_Rx_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Rx_Number__c</fullName>
    <label>External Rx Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>