force-app/main/default/objects/Prescription__c/fields/Filled__c.field-meta.xml
<CustomField>
    <fullName>Filled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filled</label>
    <type>Checkbox</type>
</CustomField>