force-app/main/default/objects/Prescription__c/fields/Filled_By__c.field-meta.xml
<CustomField>
    <fullName>Filled_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filled By</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$UserRole.Name</field>
            <operation>equals</operation>
            <value>Pharmacy_Technician</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Prescriptions</relationshipName>
    <type>Lookup</type>
</CustomField>