force-app/main/default/objects/Prescription__c/fields/Refills__c.field-meta.xml
<CustomField>
    <fullName>Refills__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Refills</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>