force-app/main/default/objects/Prescription__c/validationRules/Daily_Dose_Not_Supplied_Error.validationRule-meta.xml
<ValidationRule>
    <fullName>Daily_Dose_Not_Supplied_Error</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNUMBER(TEXT( Daily_Dose__c )))</errorConditionFormula>
    <errorDisplayField>Daily_Dose__c</errorDisplayField>
    <errorMessage>Please enter a number. Enter 0 if not applicable.</errorMessage>
</ValidationRule>