force-app/main/default/objects/Prescription__c/validationRules/No_remaining_refill.validationRule-meta.xml
<ValidationRule>
    <fullName>No_remaining_refill</fullName>
    <active>true</active>
    <errorConditionFormula>Refills__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Refills__c</errorDisplayField>
    <errorMessage>There are no refills left! Contact patient&apos;s provider.</errorMessage>
</ValidationRule>