force-app/main/default/objects/Prescription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Patient__c</columns>
    <columns>Refills__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>