force-app/main/default/objects/Prescription__c/listViews/New_Prescription.listView-meta.xml
<ListView>
    <fullName>New_Prescription</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>New Prescription</label>
</ListView>